--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
+    "gcp-build": "strapi build",
     "strapi": "strapi"
   },
   "devDependencies": {},
